* Modified error log's code previewer to show only 30 lines instead of 20 and use a monospaced font instead of the default. This ensures we get the entire preview without triggering a vertical scrollbar, improving usability. (ManageErrors.php, Errors.template.php, admin.css) * Rename 'buddies' to 'contacts' in the English version, and other minor changes. To do: asymetrical contacts. (LANGUAGES: index, ManageSettings, Packages, PersonalMessage, Profile, Who, Wireless) * Do not show "Age: N/A" in profiles if no age was specified. Just hide the line entirely. It's a waste of time, bandwidth and intelligence. (Profile.template.php) ! allow_no_censored should be tested through !empty(), as is often done. Not that it'll have any influence on a properly installed Wedge, but it's always been done this way with $modSettings, so we should harmonize it. Either add !empty() everywhere, or remove them everywhere. Considering updateSettings() is optimized for a systematical use of !empty(), it might also warrant a rewrite. (Profile.template.php)

--- a/Themes/default/skins/admin.css
+++ b/Themes/default/skins/admin.css
@@ -471,6 +471,9 @@ ul.moderation_notes
 	td div.marginleft
 		margin: 0 0 0 1ex
 
+.monospace
+	font: 9pt/1.2em "Lucida Console", "Courier New", monospace
+
 /* Miscellaneous.
 ------------------------------------------------- */
 #admincenter, #manage_boards, #manage_maintenance, #manage_mail
